template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_name": {
            "type": "String",
            "metadata": {
                "description": ""
            }
        },
        "virtualMachines_username": {
            "defaultValue": "admin_vm",
            "type": "String",
            "metadata": {
                "description": "The username for your VM."
            }
        },
        "virtualMachines_password": {
            "type": "String",
            "metadata": {
                "description": "The password for your VM."
            }
        },
        "networkInterfaces_name": {
            "type": "String",
            "metadata": {
                "description": "The name for your network interface."
            }
        },
        "publicIPAddresses_name": {
            "type": "String",
            "metadata": {
                "description": "The name for your IP address group."
            }
        },
        "networkSecurityGroups_name": {
            "type": "String",
            "metadata": {
                "description": "The name for your security group."
            }
        },
        "virtualNetworks_AppDev_RG_vnet_externalid": {
            "type": "String",
            "metadata": {
                "description": "The External ID of your virtual network. Ex: /subscriptions/<vnet Subscription ID>/resourceGroups/<resourceGroup name>/providers/Microsoft.Network/virtualNetworks/<vnet name>"
            }
        },
        "publicIPAddresses_properties_dnsSettings_domainnamelabel": {
            "type": "String",
            "metadata": {
                "description": "The domain of your URL."
            }
        },
        "publicIPAddresses_properties_dnsSettings_fqdn": {
            "type": "String",
            "metadata": {
                "description": "The URL you would like to be attributed to your application, no protocol."
            }
        },
        "fileRepositoryUri": {
            "type": "string",
            "metadata": {
                "description": "The public URI to raw version of the project repository files."
            }
        },
        "adminEmail": {
            "type": "string",
            "metadata": {
                "description": "The email / username of the main kaltura admin account."
            }
        },
        "adminPassword": {
            "type": "string",
            "metadata": {
                "description": "The password of the main kaltura admin account."
            }
        },
        "kalturaDBPassword": {
            "type": "string",
            "metadata": {
                "description": "The password of the kaltura DB user."
            }
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-05-01",
            "name": "[parameters('networkSecurityGroups_name')]",
            "location": "canadacentral",
            "tags": {
                "Project": "Kaltura",
                "Contact": "[parameters('virtualMachines_name')]"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "HTTP",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_88",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "88",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 330,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_1935",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1935",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_1936",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1936",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 350,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_9312",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9312",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 360,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Port_8443",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 370,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-05-01",
            "name": "[parameters('publicIPAddresses_name')]",
            "location": "canadacentral",
            "tags": {
                "Project": "Kaltura",
                "Contact": "[parameters('virtualMachines_name')]"
            },
            "sku": {
                "name": "Basic"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[parameters('publicIPAddresses_properties_dnsSettings_domainnamelabel')]",
                    "fqdn": "[parameters('publicIPAddresses_properties_dnsSettings_fqdn')]"
                },
                "ipTags": []
            }
        },
        {
		    "type": "Microsoft.Compute/disks",
		    "apiVersion": "2019-07-01",
		    "name": "[concat(parameters('virtualMachines_name'), '_DataDisk_0')]",
		    "location": "[resourceGroup().location]",
		    "sku": {
		        "name": "Standard_LRS"
		    },
		    "properties": {
		        "creationData": {
		            "createOption": "Empty"
		        },
		        "diskSizeGB": 64
		    }
		},
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "name": "[parameters('virtualMachines_name')]",
            "location": "canadacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_name'))]"
            ],
            "tags": {
                "Project": "Kaltura",
                "Contact": "[parameters('virtualMachines_name')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D8s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "RedHat",
                        "offer": "RHEL",
                        "sku": "77-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_name'), '_osdisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        },
                        "diskSizeGB": 64
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(parameters('virtualMachines_name'), '_DataDisk_0')]",
                            "createOption": "attach",
                            "caching": "None",
                            "writeAcceleratorEnabled": false,
                            "toBeDetached": false,
                            "managedDisk": {
		                        "id": "[resourceId('Microsoft.Compute/disks/', concat(parameters('virtualMachines_name'),'_DataDisk_0'))]"
		                    }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_name')]",
                    "adminUsername": "[parameters('virtualMachines_username')]",
                    "adminPassword": "[parameters('virtualMachines_password')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": false
                    }
                }
            }
        },
        {
			"type": "Microsoft.Compute/virtualMachines/extensions",
			"apiVersion": "2020-06-01",
			"name": "[concat(parameters('virtualMachines_name'), '/installcustomscript')]",
			"location": "canadacentral",
			"dependsOn": [
				"[concat('Microsoft.Compute/virtualMachines/',parameters('virtualMachines_name'))]"
			],
			"properties": {
				"publisher": "Microsoft.Azure.Extensions",
				"type": "CustomScript",
				"typeHandlerVersion": "2.0",
				"autoUpgradeMinorVersion":true,
				"settings": {
					"fileUris": [
						"[concat(parameters('fileRepositoryUri'),'/scripts/kaltura_install.sh')]"
					],
					"commandToExecute": "[concat('sudo ./kaltura_install.sh ', parameters('publicIPAddresses_properties_dnsSettings_fqdn'), ' ', parameters('adminEmail'), ' ', parameters('adminPassword'), ' ', parameters('virtualMachines_password'), ' ', parameters('kalturaDBPassword'), ' > kaltura_install.log')]"
				}
			}
		},
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-05-01",
            "name": "[parameters('networkInterfaces_name')]",
            "location": "canadacentral",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_name'))]"
            ],
            "tags": {
                "Project": "Kaltura",
                "Contact": "[parameters('virtualMachines_name')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(parameters('virtualNetworks_AppDev_RG_vnet_externalid'), '/subnets/default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_name'))]"
                }
            }
        }
    ]
}
